name:                haskell-how-i-start
version:             0.1.0.0
-- synopsis:         Processing some csv data
-- description:      Baseball data analysis
homepage:            https://github.com/theodesp/haskell-how-i-start#readme
license:             MIT
license-file:        LICENSE
author:              Theo Despoudis
maintainer:          thdespou@hotmail.com
copyright:           2017 Theo Despoudis
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , vector
                     , cassava
  default-language:    Haskell2010

executable haskell-how-i-start-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , haskell-how-i-start
                     , bytestring
                     , vector
                     , cassava
  default-language:    Haskell2010

test-suite haskell-how-i-start-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-how-i-start
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-how-i-start
